// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentReportStepListTest renders fail 1`] = `
<DocumentFragment>
  <div>
    <div
      class="step-details"
    >
      <mock-assessmentreportstepheader
        deps="[object Object]"
        header="[object Object]"
        instancecount="1"
        status="2"
      />
      <div>
        <table
          class="instance-details"
        >
          <tbody>
            <tr
              class="instance-pair-details"
            >
              <th
                class="instance-key"
              >
                Path
              </th>
              <td
                class="instance-value"
              >
                target1
              </td>
            </tr>
            <tr
              class="instance-pair-details"
            >
              <th
                class="instance-key"
              >
                Snippet
              </th>
              <td
                class="instance-value"
              >
                someHtml
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="step-details"
    >
      <mock-assessmentreportstepheader
        deps="[object Object]"
        header="[object Object]"
        instancecount="1"
        status="2"
      />
      <div>
        <table
          class="instance-details"
        >
          <tbody>
            <tr
              class="instance-pair-details"
            >
              <th
                class="instance-key"
              >
                Comment
              </th>
              <td
                class="instance-value"
              >
                comment
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AssessmentReportStepListTest renders incomplete 1`] = `
<DocumentFragment>
  <div>
    <div
      class="step-details"
    >
      <mock-assessmentreportstepheader
        deps="[object Object]"
        header="[object Object]"
        instancecount="1"
        status="1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AssessmentReportStepListTest renders pass 1`] = `
<DocumentFragment>
  <div>
    <div
      class="step-details"
    >
      <mock-assessmentreportstepheader
        deps="[object Object]"
        header="[object Object]"
        instancecount="1"
        status="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AssessmentReportStepListTest renders pass without instances when showInstances is false 1`] = `
<DocumentFragment>
  <div>
    <div
      class="step-details"
    >
      <mock-assessmentreportstepheader
        deps="[object Object]"
        header="[object Object]"
        instancecount="1"
        status="0"
      />
    </div>
  </div>
</DocumentFragment>
`;
